@@ -46,7 +46,7 @@ jspwiki.applicationName = @appname@
 #  Example:
 #  jspwiki.baseURL = http://www.jspwiki.org/
 #
-jspwiki.baseURL=
+jspwiki.baseURL=http://localhost:8080/JSPWiki/
 
 #
 #  Which page provider class to use.  Possibilities are:
